# c-dynbuf

./: README  meson.build
src/: c-dynbuf.c  c-dynbuf.h  demo.c  libcdynbuf.sym  meson.build
